# Sistema-AvaliacaoRisco-Financeiro

./: README.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
data/interim/: dados_novos.csv
data/processed/: X_test.pkl  X_train.pkl  y_test.pkl  y_train.pkl
data/scalers/: feature_selection.pkl  preprocessor.pkl
docker/: Dockerfile.api  Dockerfile.mlflow  Dockerfile.streamlit
experiments/mlruns/0/: meta.yaml
experiments/mlruns/351398007571633547/: meta.yaml
experiments/mlruns/351398007571633547/180fda52aac547ec925a3c9757c8432e/: meta.yaml
experiments/mlruns/351398007571633547/3641afc5b52a48f4bcf1106115510d5c/: meta.yaml
experiments/mlruns/351398007571633547/91df11fca13c4595af303f0847f0ea16/: meta.yaml
experiments/mlruns/351398007571633547/d437ccf680a1420789814857c1977a5f/: meta.yaml
experiments/mlruns/585793176030616435/: meta.yaml
experiments/mlruns/585793176030616435/0d50843815b947dabebbd2958cab29fa/: meta.yaml
experiments/mlruns/585793176030616435/1077ade1f5cb46b39ac03aafc2b42458/: meta.yaml
experiments/mlruns/585793176030616435/636dab0854e94e208e2bbb828abaf99b/: meta.yaml
experiments/mlruns/585793176030616435/6418257089ea42258f838d8b6e096fac/: meta.yaml
notebooks/: 2-EngenhariaAtributos.ipynb  3-Preprocessamento.ipynb  4-Modelagem.ipynb
scripts/: start-api.ps1  start-mlflow.ps1
src/: main.py
src/api/: app.py  run.py
src/features/: feature_store.py  teste.py
src/models/: loader_model.py  modelo_producao.py  predictor.py
src/utils/: paths.py
tests/: test_mlflow_loader.py
(+616 files in other folders)
