[project]
name = "riskml_engine"
version = "0.1.0"
description = "Pipeline de Machine Learning para avaliação de risco de crédito"
readme = "README.md"
requires-python = ">=3.12,<3.13"

# ============================
# DEPENDÊNCIAS PRINCIPAIS
# ============================
dependencies = [
    # Base
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Visualização
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",

    # Estatística e testes
    "scipy>=1.12.0",
    "statsmodels>=0.14.1",

    # ML Core
    "scikit-learn==1.4.2",
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "optuna>=3.5.0",

    # Pipeline, preprocessamento e utils
    "joblib>=1.4.0",

    # Explicabilidade
    "shap>=0.44.1",

    # MLOps e tracking de experimentos
    "mlflow>=2.14.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",

    # Dashboard / Front
    "streamlit>=1.36.0",
]

# ============================
# DEPENDÊNCIAS OPCIONAIS
# ============================
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "isort",
]

# ============================
# BUILD CONFIG (Poetry não necessário)
# ============================
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
